# Pathfinding

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: config.yml
examples/: CMakeLists.txt  GameMap.hpp  astar_example.cpp
include/: astar.hpp  path.hpp  tilebasedmap.hpp
include/pathfinding/: AStar.hpp  Coordinate.hpp  Heuristic.hpp  Path.hpp  TileBasedMap.hpp
include/pathfinding/astar/: AStar.hpp
include/pathfinding/heuristics/: ClosestHeuristic.hpp  ClosestSquaredHeuristic.hpp  ManhattanHeuristic.hpp
tests/: CMakeLists.txt  TestAStarAlgorithm.cpp  TestCoordinate.cpp
